Fixed Graphic Glitch on Safari 11.0.1
Play button - "Selezione Scene"

--- a/scecilia/style.css
+++ b/scecilia/style.css
@@ -135,7 +135,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 1em
+    margin-right: 1em:
+    flex-shrink: 0;
 }
 .play-element {
     display: flex;
